syntax = "proto3";

package session;

// save

message SaveRequest {
    string sessid = 1;
    int64 userId = 2;
    string access_token = 3;
    string refresh_token = 4;
}

message SaveResponse {
    bool success = 1;
}

// get

message GetRequest {
    string sessid = 1;
}

message GetResponse {
    int64 userId = 1;
    string access_token = 2;
    string refresh_token = 3;
}

// create

message CreateRequest {
}

message CreateResponse {
    string sessid = 1;
}

service SessionService {
    rpc Save (SaveRequest) returns (SaveResponse) {}
    rpc Get (GetRequest) returns (GetResponse) {}
    rpc Create (CreateRequest) returns (CreateResponse) {}
}
